fix(oblique/material): don't stretch images in cards
OUI-3421

--- a/projects/oblique/src/styles/scss/material/_mat-card.scss
+++ b/projects/oblique/src/styles/scss/material/_mat-card.scss
@@ -165,7 +165,9 @@
 
 	.mat-mdc-card-image,
 	.mdc-card__media {
-		width: 100%;
+		max-width: 100%;
+		height: auto;
+		align-self: center;
 	}
 }
 
